[tool.poetry]
name = "graphene-django-query-optimizer"
version = "0.0.1"
description = "Automatically optimize SQL queries in Graphene-Django schemas."
authors = [
    "Matti Lamppu <lamppu.matti.akseli@gmail.com>",
]
packages = [
    { include = "query_optimizer" },
]
license = "MIT"
readme = "README.md"
homepage = "https://mrthearman.github.io/graphene-django-query-optimizer"
repository = "https://github.com/MrThearMan/graphene-django-query-optimizer"
keywords = [
    "django",
    "graphene",
    "sql",
    "graphql",
    "python",
    "query",
    "optimizer",
    "optimization",
]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
]
include = [
    "README.md",
    "LICENSE",
]
exclude = [
    "tests",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MrThearMan/graphene-django-query-optimizer/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4"
Django = ">=4.0"
graphene-django = ">=3.0.0"
django-filter = { version = ">=21.1", optional = true }
typing-extensions = {version = ">=4.7.1", python = "<3.10"}

[tool.poetry.extras]
filter = ["django-filter"]

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
coverage = "7.3.0"
pytest-django = "4.5.2"
pre-commit = "3.3.3"
tox = "4.9.0"
tox-gh-actions = "3.1.3"
faker = "19.3.0"
sqlparse = "0.4.4"
django-graphiql-debug-toolbar = "0.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.2"
pymdown-extensions = "10.1"
mkdocs-mermaid2-plugin = "1.0.8"

[tool.poetry.group.lint.dependencies]
mypy = "1.5.1"
django-stubs = "4.2.3"

[tool.black]
line-length = 120

[tool.ruff]
fix = true
line-length = 120
extend-exclude = [
    "tests/*",
]
typing-modules = [
    "query_optimizer.typing",
]
select = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "ARG",      # flake8-unused-arguments
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C90",      # mccabe
    "C4",       # flake8-comprehensions
    "COM",      # flake8-commas
    "DJ",       # flake8-django
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle errors
    "EM",       # flake8-errmsg
    "F",        # pyflakes
    "FBT",      # flake8-boolean-trap
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "INP",      # flake8-no-pep420
    "INT",      # flake8-gettext
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "PYI",      # flake8-pyi
    "Q",        # flake8-quotes
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "SLF",      # flake8-self
    "SLOT",     # flake8-slots
    "T10",      # flake8-debugger
    "T20",      # flake8-print
    "TCH",      # flake8-type-checking
    "TRY",      # tryceratops
    "W",        # pycodestyle warnings
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in method
    "ANN401",  # Any-typing allowed
    "N805",  # First argument of a method should be named `self`
    "SLF001",  # Accessing private members is allowed
]

[tool.ruff.pylint]
max-args = 7

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "tests.project.settings"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    ".venv/*",
    ".tox/*",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
]

[tool.pytest.ini_options]
addopts = "-vv -s --log-cli-level=INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39, 310, 311}-django{40, 41, 42}-gd{30, 31}
isolated_build = true

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
    DJANGO_SETTINGS_MODULE = tests.project.settings
deps =
    django40: Django >=4.0,<4.1
    django41: Django >=4.1,<4.2
    django42: Django >=4.2,<4.3

    gd30: graphene-django >=3.0.0,<3.1.0
    gd31: graphene-django >=3.1.0,<3.2.0

    django-filter
    typing-extensions

    pytest
    coverage
    pytest-django
    faker
    sqlparse
commands =
    coverage run -m pytest -vv -s --log-cli-level=INFO
"""

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
